openshift/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  generation: 1
  labels:
    app: grafana
  name: grafana
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: grafana
    deploymentconfig: grafana
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Recreate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: grafana
        deploymentconfig: grafana
      name: grafana
    spec:
      containers:
      - command:
        - ./bin/grafana-server
        image: grafana/grafana:5.4.3
        imagePullPolicy: IfNotPresent
        name: grafana-ocp
        ports:
        - containerPort: 3000
          name: grafana-http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/grafana/data
          name: gf-data
        - mountPath: /etc/grafana/config.ini
          name: gfconfig
          subPath: config.ini
        - mountPath: /etc/grafana/provisioning/dashboards
          name: dashboards
          readOnly: true
        - mountPath: /etc/grafana/provisioning/datasources
          name: datasources
          readOnly: true
        - mountPath: /var/lib/grafana/dashboards
          name: grafana-dashboards-csfje
          readOnly: true
        - mountPath: /var/lib/grafana
          name: grafana-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: grafana-ocp
      serviceAccountName: grafana-ocp
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: gf-config
        name: gfconfig
      - emptyDir: {}
        name: gf-data
      - configMap:
          defaultMode: 420
          name: dashboards
        name: dashboards
      - configMap:
          defaultMode: 420
          name: datasources
        name: datasources
      - configMap:
          defaultMode: 420
          name: grafana-dashboards
        name: grafana-dashboards-csfje
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data
  test: false
  triggers:
  - type: ConfigChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
