openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: grafana
  name: grafana
spec:
  port:
    targetPort: grafana
  tls:
    termination: edge
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
